# inter-discord-bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
commands/: __init__.py  nowplaying.py  pause.py  play.py  playlist.py  queue.py  resume.py  skip.py  stop.py
music/: __init__.py  audio_source.py  player.py  playlist_manager.py
playlists/example-playlist/: README.md
scripts/: download_playlist.py
